frontend/themes/evstats/styles.css
@import "animation.css";
@import "opacity.css";
@import url('./main-layout.css');
@import url('./views/e-v-statistics-view.css');
@import url('./views/charging-view.css');

html {
    --fullscreen-height: 100%;
}

vaadin-button:hover {
    cursor: pointer;
}

/* iOS specific height setting */
@supports (-webkit-touch-callout: none) {
    html {
        --fullscreen-height: calc(100% - 6.5rem);
        --fullscreen-height-charging-updated: calc(100vh + 80rem);
    }

    /* iOS PWA specific CSS */
    @media (display-mode: standalone) {
        html {
            --fullscreen-height: calc(100vh - 5rem);
            --fullscreen-height-charging-updated: calc(100vh + 73rem);
        }
    }
}

vaadin-app-layout::part(drawer) {
    width: 240px;
}

vaadin-dialog-overlay::part(overlay) {
    width: 420px;
}

